[package]
name = "v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.0"
